--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -39,6 +39,11 @@
               <li>
                 <a href="/job-roles" class="{% if currentPage === 'job-roles' %}active{% endif %}">{{ t('nav.jobRoles') }}</a>
               </li>
+              {% if isAdmin %}
+                <li>
+                  <a href="/applicants" class="{% if currentPage === 'applicants' %}active{% endif %}">{{ t('nav.applicants') }}</a>
+                </li>
+              {% endif %}
             </ul>
           </div>
           <a href="/" class="btn btn-ghost text-xl">
@@ -55,6 +60,11 @@
             <li>
               <a href="/job-roles" class="{% if currentPage === 'job-roles' %}active{% endif %}">{{ t('nav.jobRoles') }}</a>
             </li>
+            {% if isAdmin %}
+              <li>
+                <a href="/applicants" class="{% if currentPage === 'applicants' %}active{% endif %}">{{ t('nav.applicants') }}</a>
+              </li>
+            {% endif %}
           </ul>
         </div>
         <div
