--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -23,13 +23,13 @@
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-R9N3C5D7GH"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id={{ env.GA4_MEASUREMENT_ID }}"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'G-R9N3C5D7GH');
+      gtag('config', '{{ env.GA4_MEASUREMENT_ID }}');
     </script>
   </head>
   <body {% block body_attributes %} {% endblock %}>
