--- a/views/layouts/base.njk
+++ b/views/layouts/base.njk
@@ -21,7 +21,7 @@
     <!-- External CSS libraries -->
     {% block external_styles %}{% endblock %}
     <!-- Lucide Icons -->
-    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.js"></script>
+    <script src="https://unpkg.com/lucide@0.546.0/dist/umd/lucide.js"></script>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id={{ env.GA4_MEASUREMENT_ID }}"></script>
     <script>
